# N-Queens_SFML

./: Algorithm.cpp  Algorithm.h  Body.cpp  Body.h  CMakeLists.txt  Controller.cpp  Controller.h  Model.cpp  Model.h  NQueens.cpp  NQueens.h  View.cpp  View.h  main.cpp
